--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/dashboard.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/dashboard.html
@@ -64,6 +64,8 @@
                                 </tr>
                             </table>
                             <table class="coursesTable">
+                                <div th:if="${#lists.isEmpty(inProgressList)}">
+                                    <span><center>You have no course in progress.</center></span></div>
 
                                 <tr th:each="course : ${myCourses}">
 
@@ -86,8 +88,9 @@
                             </tr>
                         </table>
                         <table class="skillsTable">
+                            <div th:if="${#lists.isEmpty(skillTitles)}">
+                                <span><center>You have not acquired any skills.</center></span></div>
                             <tr > 
-
                                 <td  th:each="skill : ${skillTitles}" class="award shadow p-0.5 mb-5 rounded"> <span th:text="${skill}" > </span></td>
                             </tr>
                         </table>
@@ -138,142 +141,11 @@
 
 
     </div>
-
-
-<!-- 
-    <script th:inline="javascript">
-
-        // this is for the pie chart
-        
-        // var skillLTitles=/*[[${skillTitles}]]*/ [];
-        // var unFinishPart = ["unFinished"];
-        // skillLTitles.push.apply(skillLTitles,unFinishPart);
-        // console.log(skillLTitles);
-
-        // var progressList= /*[[${progressList}]]*/ [];
-
-        // var totalFinishedPercentage = 0;
-
-        
-
-        //change actual progress based on numbers of skill that have
-        for(var i=0; i< progressList.length; i++){
-            progressList[i]= progressList[i]/progressList.length;
-            totalFinishedPercentage += progressList[i];
-        }
-
- 
-
-        var unFinishedPerentage =  (100-totalFinishedPercentage);
-
-        var unFinishedPer = [unFinishedPerentage];
-        progressList.push.apply(progressList,unFinishedPer);
-
-   
-        var dreamJobTitle = /*[[${dreamJobTitle}]]*/ 'Dream Job Title'
-
-        var barColors = [
-          "#b91d47",
-          "#00aba9",
-          "#2b5797",
-          "#e8c3b9",
-          "#1e7145"
-        ];
-        
-        new Chart("piechart", {
-          type: "pie",
-          data: {
-            labels: skillLTitles,
-            datasets: [{
-              backgroundColor: barColors,
-              data: progressList
-            }]
-          },
-          options: {
-            maintainAspectRatio:false,
-            title: {
-              display: true,
-              text: dreamJobTitle
-            },
-            responsive: true,
-        // show percentage of slice when hover
-        tooltips: 
-        {
-            callbacks: {
-                label: function(tooltipItem, data) {
-                    var allData = data.datasets[tooltipItem.datasetIndex].data;
-                    var tooltipLabel = data.labels[tooltipItem.index];
-                    var tooltipData = allData[tooltipItem.index];
-                    var total = 0;
-                    for (var i=0; i<allData.length; i++) {
-                        total += allData[i];
-                    }
-                    var tooltipPercentage = Math.round((tooltipData / total) * 100);
-                    return tooltipLabel + ':' + tooltipData + ' (' + tooltipPercentage + '%)';
-                }
-            }
-        }
-        }
-        });
-
-        //this is for the progress bar
-        var xValues = ["Java", "Python", "SQL","CSS", "Android", "HTML","Java", "Python", "SQL"];
-        var yValues = [0, 49, 44, 29, 35, 15,20,0,100];
-        var barColors = 
-          "#ad2eb3"
-        ;
-
-        new Chart("progressbar", {
-        type: "horizontalBar",
-        data: {
-            labels: xValues,
-            datasets: [{
-            backgroundColor: barColors,
-            data: yValues
-            }]
-        },
-        options: {
-            legend: {display: false},
-            title: {
-            // text: "World Wine Production 2018"
-            },
-            
-            scales: {
-                xAxes: [{
-                    gridLines: {
-                        drawOnChartArea: false
-                    },
-                    ticks: {
-                    beginAtZero: true,
-                    min: 0,
-                    max: 100,
-                    stepSize: 20,
-                    callback: function (value) {
-                      return (value / this.max * 100).toFixed(0) + '%'; // convert it to percentage
-                      },
-                    }
-                }],
-                yAxes: [{
-                    gridLines: {
-                        drawOnChartArea: false
-                    }
-                }]
-            }
-        }}
-            
-        );
-
-        // AJAX
-
-        </script> -->
-
         
 
         <script th:inline="javascript">
             var chartDatas = /*[[${chartDatas}]]*/ [];
         </script>
-
-
         
 
         <script th:src="@{/js/chart.js}"></script>
