setting html fixed

--- a/Downloads/techsmvp-KaungFixed/src/main/resources/static/css/js-calendar-dashboard.css
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/static/css/js-calendar-dashboard.css
@@ -61,7 +61,7 @@
   position: relative;
   width: 100%;
 }
-/* .calRow { min-height: 100px;} */
+.calRow { min-height: 50px;}
 .calRowHead, .calRowEvt { z-index: 2; }
 .calRowBack {
   position: absolute;
