--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature3-Dashboard/calendar.html
@@ -41,7 +41,7 @@
                             </tr>
                             <tr  id="myCourseS" th:each="course : ${scheduledCourseList}">
                                 <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"> <img th:src="@{${course.thumbnail}}" width="160px" height="90px"></a> </td>
-                                <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a><p class="fw-light" th:text="${course.getSkill()}"></p></td>
+                                <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a></td>
                             </tr>
                         </table>
                     </div>
@@ -56,7 +56,7 @@
                             </tr>
                             <tr th:each="course : ${unscheduledCourseList}">
                                 <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"> <img th:src="@{${course.thumbnail}}" width="160px" height="90px"></a> </td>
-                                <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a><p class="fw-light" th:text="${course.getSkill()}"></p></td>
+                                <td><a th:href="@{/myCourses/watchCourse/}+${course.myCourseId}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a></td>
                             </tr>
                         </table>
                     </div>
@@ -171,8 +171,8 @@
         if(start.value===""||end.value===""||selectCourse.value===""||bgColor.value===""||txtColor.value===""||txtNote.value===""){
         alert("fill all columns")
         
-        }
-        if(start.value!==""&&end.value!==""&&selectCourse.value!==""&&bgColor.value!==""&&txtColor.value!==""&&txtNote.value!=="")
+        }else
+        // if(start.value!==""&&end.value!==""&&selectCourse.value!==""&&bgColor.value!==""&&txtColor.value!==""&&txtNote.value!=="")
         {
             xhr.open("POST", "/calendar/create", true);
             xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
